[package]
name = "seeded_dice_roller"
version = "0.1.0"
edition = "2021"
description = "A dice roller using a seed to give deterministic results."
license = "MIT"

[dependencies]
log = "0.4.17"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
serde = { version = "1.0.147", features = ["derive"] }
